# NeonDrift

./: .gitignore  CMakeLists.txt  LICENSE  README.md
build2/: build_log.txt
include/core/: Game.hpp  GameState.hpp  InputManager.hpp  ScoreManager.hpp
include/entities/: Player.hpp
include/graphics/: ParticleSystem.hpp
include/ui/: UIManager.hpp
src/: main.cpp
src/core/: Game.cpp  ScoreManager.cpp
src/entities/: Player.cpp
src/graphics/: ParticleSystem.cpp
src/ui/: UIManager.cpp
